--- a/blue-team/package.json
+++ b/blue-team/package.json
@@ -7,13 +7,19 @@
     "start": "node server.js",
     "dev": "node --watch server.js"
   },
-  "keywords": ["tf2", "hats", "websocket", "rest-api"],
+  "keywords": [
+    "tf2",
+    "hats",
+    "websocket",
+    "rest-api"
+  ],
   "author": "Team Blue",
   "license": "MIT",
   "dependencies": {
+    "express": "^5.2.1",
     "ws": "^8.18.0"
   },
   "engines": {
-    "node": "20.10.0"
+    "node": "20"
   }
 }
